Cleaning up project page

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -162,6 +162,12 @@ nav a.active, nav a:focus {
 /* ==========================================================================
    Responsive styles 
    ========================================================================== */
+.project {
+  margin: 10px 0 30px;
+}
+/* ==========================================================================
+   Responsive styles 
+   ========================================================================== */
 
 @media (max-width: 979px) {
   .main {
