--- a/public/css/main.less
+++ b/public/css/main.less
@@ -21,41 +21,20 @@
    ========================================================================== */
 
 @phi: 1.618; // The golden ratio
+@white: #f8f8f2;
+@grey: #d7d7d7;
+@tan: #75715e;
+@orchid: #f92672;
+@yellow: #e6db74;
+@green: #a6e22e;
 @blue: #00557f;
-@blueDark: #002233;
-@blueLight: #64B4DB;
 @orange: #B16200;
-@background: #E8EAF0;
-@navColor: #777;
 
 @fancySansFontFamily: "Amaranth", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 /* ==========================================================================
    Less mixins 
    ========================================================================== */
-
-@drip-width: 1px;
-  
-.dripX (@index) when (@index > 0) {
-  .drip@{index} { .drip(@index); }
-  .dripX(@index - 1);
-}
-
-.drip (@index) {
-  @len: percentage(@index / 10);
-  background: @grayDarker -webkit-linear-gradient(top, @background 6px, @grayDarker 15px, @grayDarker @len - 15, @background @len);
-  background: @grayDarker linear-gradient(to bottom, @background 6px, @grayDarker 15px, @grayDarker @len - 15, @background @len);
-  display: inline-block;
-  float: left;
-  height: 300px;
-  width: @drip-width;
-}
-
-.dripX(10);
-
-.last-drip {
-  margin-left: -(@drip-width);
-}
 
 .titleFontSize(@navFontSize) {
   font-size: @navFontSize * @phi * 2;
@@ -66,7 +45,7 @@
    ========================================================================== */
 
 body {
-  background: @background;   
+  background: @grey;   
 }
 
 .main {
@@ -78,6 +57,10 @@ body {
 .uncentered {
   position: relative;
   top: auto;
+}
+
+.hidden {
+  visibility: hidden;
 }
 
 /* ==========================================================================
@@ -93,16 +76,12 @@ h4 {
    ========================================================================== */
 @navFontSize: 2em;
 
-header {
-  margin: 0 0 15px;
-}
-
 nav {
   text-align: center;
 }
 
 nav a {
-  color: @navColor;
+  color: @blue;
   font-family: @fancySansFontFamily;
   font-size: @navFontSize;
 }
@@ -114,7 +93,7 @@ nav a:hover {
 }
 
 nav a.active, nav a:focus {
-  color: @grayDark;
+  color: @gray;
   text-decoration: none;
 }
 
@@ -124,40 +103,95 @@ nav a.active, nav a:focus {
 }
 
 /* ==========================================================================
-   Content boxes 
+   Header 
    ========================================================================== */
-.content-box {
-  margin: 0 5px;
-}
-
-.content-head, .content-head:focus {
-  color: @orange;
-  display: inline-block;
-  font-size: 1.25em;
-  margin: 0 0 5px;
+header {
+  font-family: @fancySansFontFamily;
+  font-size: 6em;
+  height: 200px;
+  padding: 200px 0;
   text-align: center;
-  width: 100%;
 }
 
-.content-head:hover {
-  color: @orange;
-  outline: none;
-  text-decoration: none;
+.skyline {
+  background: url('../img/nyc-skyline.png') repeat-x 50% 0;
 }
 
-#contact .content-head, #contact .content-head:focus {
-  color: @blue;
+/* ==========================================================================
+   Sections 
+   ========================================================================== */
+section {
+  height: 600px;
 }
 
-#contact .content-head:hover {
-  color: @blueDark;
+#skills  {
+  background: @grey linear-gradient(to bottom, darken(@grey, @phi * 20%) 0%, @grey 1%);
+  font-size: 1.4em;
+
+  ul {
+    margin: 15px 0;
+  }
+
+  ul li {
+    font-size: .8em;
+    list-style: none;
+  }
+
+  h5 {
+    margin: 15px 0;
+  }
+
+  h5.left {
+    color: @blue;
+    margin-top: 100px;
+  }
 }
 
-.content-body {
-  display: none;
-  margin: 5px 0 0 5px;
-  text-align: left;
+#fragmentChart {
+  height: 400px;
+  margin: 50px 0;
+  width: 400px;
 }
+
+#sound {
+  background: @white;
+}
+
+.headphones {
+  background: url('../img/headphones3.png') no-repeat right -80px;
+  height: 100%;
+}
+
+.sample-code {
+  margin-top: 10%;
+}
+
+.sample-code .linenum {
+  color: @grey;
+  margin: 0 15px 0 0;
+}
+
+.sample-code .tag {
+  color: @orchid;
+}
+
+.sample-code .attr {
+  color: @green;
+}
+
+.sample-code .string {
+  color: @yellow;
+}
+
+.sample-code .indent {
+  margin: 0 0 0 30px;
+}
+
+/* ==========================================================================
+   Hexagon 
+   ========================================================================== */
+.hexagon {
+  width: 100px; height: 55px; background: red; position: relative; } #hexagon:before { content: ""; position: absolute; top: -25px; left: 0; width: 0; height: 0; border-left: 50px solid transparent; border-right: 50px solid transparent; border-bottom: 25px solid red; } #hexagon:after { content: ""; position: absolute; bottom: -25px; left: 0; width: 0; height: 0; border-left: 50px solid transparent; border-right: 50px solid transparent; border-top: 25px solid red; }
 
 /* ==========================================================================
    Responsive styles 
